fix de scrollbar

--- a/laser-chess-web/src/styles.css
+++ b/laser-chess-web/src/styles.css
@@ -32,6 +32,10 @@
 }
 
 * { box-sizing: border-box; }
+* {
+  scrollbar-width: thin;
+  scrollbar-color: var(--S3) var(--S1);
+}
 
 body {
     margin: 0;
